Remove info text and add STUN servers for better P2P

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div id="hotbar">
             <!-- Slots will be filled by JS -->
         </div>
-        <div id="info">WASD to Move | SPACE Jump/Swim | Click to Mine | 1-9 Select<br>Water Physics Enabled</div>
+        <div id="info"></div>
         <div id="block-count">Blocks: 0</div>
         <div id="player-count">Players: 1 (Searching...)</div>
     </div>
