Switch to MQTT for faster P2P and add STUN servers

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             "imports": {
                 "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
                 "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-                "trystero": "https://esm.sh/trystero@0.19.0/torrent"
+                "trystero": "https://esm.sh/trystero@0.19.0/mqtt"
             }
         }
     </script>
