--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SkalekCraft</title>
+    <link rel="icon" type="image/png" href="textures/logo.png">
     <link rel="stylesheet" href="style.css?v=44">
 </head>
 
